Remove deprecated feed files for the restaurant menu in both Atom and RSS formats.

--- a/www.abrirestaurant.com/.htaccess
+++ b/www.abrirestaurant.com/.htaccess
@@ -4,8 +4,22 @@ RewriteEngine On
 # Ressources communes
 RewriteRule ^(templates|media|modules|plugins|components|images|assets)/(.*)$ /$1/$2 [L]
 
-# Redirection vers la version française
-RewriteCond %{REQUEST_URI} !^/fr/
+# Détection de la langue du navigateur et redirection
+RewriteCond %{REQUEST_URI} ^/$
+RewriteCond %{HTTP:Accept-Language} ^en [NC]
+RewriteRule ^$ /en/index.html [R=302,L]
+
+RewriteCond %{REQUEST_URI} ^/$
+RewriteRule ^$ /fr/index.html [R=302,L]
+
+# Empêcher la redirection pour les dossiers de langue
+RewriteCond %{REQUEST_URI} !^/(fr|en)/
+RewriteCond %{REQUEST_URI} !^/(templates|media|modules|plugins|components|images|assets)/
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{HTTP:Accept-Language} ^en [NC]
+RewriteRule ^(.*)$ /en/$1 [L]
+
+RewriteCond %{REQUEST_URI} !^/(fr|en)/
 RewriteCond %{REQUEST_URI} !^/(templates|media|modules|plugins|components|images|assets)/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.*)$ /fr/$1 [L]
